// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Div props Border 1`] = `
.c0 {
  display: flex;
  border: 1px solid pink;
  border-radius: 50%;
}

<div
  className="c0"
  radius="50%"
/>
`;

exports[`Root Div props Flex 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
}

<div
  className="c0"
/>
`;

exports[`Root Div props Size 1`] = `
.c0 {
  display: flex;
  width: 100px;
  max-width: 200px;
  height: 100%;
  max-height: 200em;
}

<div
  className="c0"
  height="100%"
  width={100}
/>
`;

exports[`Root Div props Space 1`] = `
.c0 {
  display: flex;
  margin: 16px;
  margin-top: 8px;
  margin-right: 8px;
  margin-bottom: 8px;
  margin-left: 8px;
  padding: 16px;
  padding-top: 8px;
  padding-right: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
}

<div
  className="c0"
/>
`;

exports[`Root Div props Text 1`] = `
.c0 {
  display: flex;
  color: black;
}

<div
  className="c0"
  color="black"
/>
`;
